--- a/web/css/flatlybootstrap.css
+++ b/web/css/flatlybootstrap.css
@@ -120,6 +120,14 @@ textarea {
   font: inherit;
   margin: 0;
 }
+apage {
+font-size: 1em;
+margin: auto
+border:10px;
+width: 300px;
+text-align:left;
+
+}
 button {
   overflow: visible;
 }
@@ -1122,7 +1130,7 @@ img {
   padding: 4px;
   line-height: 1.42857143;
   background-color: #ffffff;
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
@@ -1138,7 +1146,7 @@ hr {
   margin-top: 21px;
   margin-bottom: 21px;
   border: 0;
-  border-top: 1px solid #ecf0f1;
+  border-top: 1px solid #fff59d;
 }
 .sr-only {
   position: absolute;
@@ -1456,7 +1464,7 @@ blockquote {
   padding: 10.5px 21px;
   margin: 0 0 21px;
   font-size: 18.75px;
-  border-left: 5px solid #ecf0f1;
+  border-left: 5px solid #fff59d;
 }
 blockquote p:last-child,
 blockquote ul:last-child,
@@ -1480,7 +1488,7 @@ blockquote .small:before {
 blockquote.pull-right {
   padding-right: 15px;
   padding-left: 0;
-  border-right: 5px solid #ecf0f1;
+  border-right: 5px solid #fff59d;
   border-left: 0;
   text-align: right;
 }
@@ -1543,7 +1551,7 @@ pre {
   word-break: break-all;
   word-wrap: break-word;
   color: #7b8a8b;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   border: 1px solid #cccccc;
   border-radius: 4px;
 }
@@ -2252,11 +2260,11 @@ th {
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
-  border-top: 1px solid #ecf0f1;
+  border-top: 1px solid #fff59d;
 }
 .table > thead > tr > th {
   vertical-align: bottom;
-  border-bottom: 2px solid #ecf0f1;
+  border-bottom: 2px solid #fff59d;
 }
 .table > caption + thead > tr:first-child > th,
 .table > colgroup + thead > tr:first-child > th,
@@ -2267,7 +2275,7 @@ th {
   border-top: 0;
 }
 .table > tbody + tbody {
-  border-top: 2px solid #ecf0f1;
+  border-top: 2px solid #fff59d;
 }
 .table .table {
   background-color: #ffffff;
@@ -2281,7 +2289,7 @@ th {
   padding: 5px;
 }
 .table-bordered {
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > tbody > tr > th,
@@ -2289,7 +2297,7 @@ th {
 .table-bordered > thead > tr > td,
 .table-bordered > tbody > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
 }
 .table-bordered > thead > tr > th,
 .table-bordered > thead > tr > td {
@@ -2299,7 +2307,7 @@ th {
   background-color: #f9f9f9;
 }
 .table-hover > tbody > tr:hover {
-  background-color: #ecf0f1;
+  background-color: #fff59d;
 }
 table col[class*="col-"] {
   position: static;
@@ -2324,7 +2332,7 @@ table th[class*="col-"] {
 .table > thead > tr.active > th,
 .table > tbody > tr.active > th,
 .table > tfoot > tr.active > th {
-  background-color: #ecf0f1;
+  background-color: #fff59d;
 }
 .table-hover > tbody > tr > td.active:hover,
 .table-hover > tbody > tr > th.active:hover,
@@ -2427,7 +2435,7 @@ table th[class*="col-"] {
     margin-bottom: 15.75px;
     overflow-y: hidden;
     -ms-overflow-style: -ms-autohiding-scrollbar;
-    border: 1px solid #ecf0f1;
+    border: 1px solid #fff59d;
   }
   .table-responsive > .table {
     margin-bottom: 0;
@@ -2563,7 +2571,7 @@ output {
 .form-control[readonly],
 fieldset[disabled] .form-control {
   cursor: not-allowed;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   opacity: 1;
 }
 textarea.form-control {
@@ -3784,7 +3792,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   line-height: 1;
   color: #2c3e50;
   text-align: center;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   border: 1px solid #dce4ec;
   border-radius: 4px;
 }
@@ -3869,7 +3877,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
 }
 .nav > li.disabled > a {
   color: #b4bcc2;
@@ -3884,7 +3892,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav .open > a,
 .nav .open > a:hover,
 .nav .open > a:focus {
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   border-color: #18bc9c;
 }
 .nav .nav-divider {
@@ -3897,7 +3905,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   max-width: none;
 }
 .nav-tabs {
-  border-bottom: 1px solid #ecf0f1;
+  border-bottom: 1px solid #fff59d;
 }
 .nav-tabs > li {
   float: left;
@@ -3910,14 +3918,14 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-radius: 4px 4px 0 0;
 }
 .nav-tabs > li > a:hover {
-  border-color: #ecf0f1 #ecf0f1 #ecf0f1;
+  border-color: #fff59d #fff59d #fff59d;
 }
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
   color: #2c3e50;
   background-color: #ffffff;
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
   border-bottom-color: transparent;
   cursor: default;
 }
@@ -3952,11 +3960,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs.nav-justified > .active > a,
 .nav-tabs.nav-justified > .active > a:hover,
 .nav-tabs.nav-justified > .active > a:focus {
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
 }
 @media (min-width: 768px) {
   .nav-tabs.nav-justified > li > a {
-    border-bottom: 1px solid #ecf0f1;
+    border-bottom: 1px solid #fff59d;
     border-radius: 4px 4px 0 0;
   }
   .nav-tabs.nav-justified > .active > a,
@@ -4020,11 +4028,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav-tabs-justified > .active > a,
 .nav-tabs-justified > .active > a:hover,
 .nav-tabs-justified > .active > a:focus {
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
 }
 @media (min-width: 768px) {
   .nav-tabs-justified > li > a {
-    border-bottom: 1px solid #ecf0f1;
+    border-bottom: 1px solid #fff59d;
     border-radius: 4px 4px 0 0;
   }
   .nav-tabs-justified > .active > a,
@@ -4377,7 +4385,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #2c3e50;
+  background-color: #F77503;
   border-color: transparent;
 }
 .navbar-default .navbar-brand {
@@ -4578,7 +4586,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 8px 15px;
   margin-bottom: 21px;
   list-style: none;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   border-radius: 4px;
 }
 .breadcrumb > li {
@@ -4650,7 +4658,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > .disabled > a,
 .pagination > .disabled > a:hover,
 .pagination > .disabled > a:focus {
-  color: #ecf0f1;
+  color: #fff59d;
   background-color: #3be6c4;
   border-color: transparent;
   cursor: not-allowed;
@@ -4839,7 +4847,7 @@ a.badge:focus {
   padding: 30px 15px;
   margin-bottom: 30px;
   color: inherit;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
 }
 .jumbotron h1,
 .jumbotron .h1 {
@@ -4880,7 +4888,7 @@ a.badge:focus {
   margin-bottom: 21px;
   line-height: 1.42857143;
   background-color: #ffffff;
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
@@ -5003,7 +5011,7 @@ a.thumbnail.active {
   overflow: hidden;
   height: 21px;
   margin-bottom: 21px;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -5124,7 +5132,7 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #ffffff;
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
 }
 .list-group-item:first-child {
   border-top-right-radius: 4px;
@@ -5145,12 +5153,12 @@ a.list-group-item:hover,
 a.list-group-item:focus {
   text-decoration: none;
   color: #555555;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
 }
 .list-group-item.disabled,
 .list-group-item.disabled:hover,
 .list-group-item.disabled:focus {
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   color: #b4bcc2;
   cursor: not-allowed;
 }
@@ -5319,8 +5327,8 @@ a.list-group-item-danger.active:focus {
 }
 .panel-footer {
   padding: 10px 15px;
-  background-color: #ecf0f1;
-  border-top: 1px solid #ecf0f1;
+  background-color: #fff59d;
+  border-top: 1px solid #fff59d;
   border-bottom-right-radius: 3px;
   border-bottom-left-radius: 3px;
 }
@@ -5430,7 +5438,7 @@ a.list-group-item-danger.active:focus {
 .panel > .panel-body + .table-responsive,
 .panel > .table + .panel-body,
 .panel > .table-responsive + .panel-body {
-  border-top: 1px solid #ecf0f1;
+  border-top: 1px solid #fff59d;
 }
 .panel > .table > tbody:first-child > tr:first-child th,
 .panel > .table > tbody:first-child > tr:first-child td {
@@ -5507,31 +5515,31 @@ a.list-group-item-danger.active:focus {
 }
 .panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
-  border-top: 1px solid #ecf0f1;
+  border-top: 1px solid #fff59d;
 }
 .panel-group .panel-footer {
   border-top: 0;
 }
 .panel-group .panel-footer + .panel-collapse .panel-body {
-  border-bottom: 1px solid #ecf0f1;
+  border-bottom: 1px solid #fff59d;
 }
 .panel-default {
-  border-color: #ecf0f1;
+  border-color: #fff59d;
 }
 .panel-default > .panel-heading {
   color: #2c3e50;
-  background-color: #ecf0f1;
-  border-color: #ecf0f1;
+  background-color: #fff59d;
+  border-color: #fff59d;
 }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: #ecf0f1;
+  border-top-color: #fff59d;
 }
 .panel-default > .panel-heading .badge {
-  color: #ecf0f1;
+  color: #fff59d;
   background-color: #2c3e50;
 }
 .panel-default > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: #ecf0f1;
+  border-bottom-color: #fff59d;
 }
 .panel-primary {
   border-color: #2c3e50;
@@ -5653,7 +5661,7 @@ a.list-group-item-danger.active:focus {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #ecf0f1;
+  background-color: #fff59d;
   border: 1px solid transparent;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
@@ -6672,7 +6680,7 @@ table-bordered > tbody > tr > td,
 .table-bordered > tbody > tr > td,
 table-bordered > tfoot > tr > td,
 .table-bordered > tfoot > tr > td {
-  border: 1px solid #ecf0f1;
+  border: 1px solid #fff59d;
 }
 .form-control,
 input {
@@ -6778,7 +6786,7 @@ input:focus {
 a.list-group-item.active,
 a.list-group-item.active:hover,
 a.list-group-item.active:focus {
-  border-color: #ecf0f1;
+  border-color: #fff59d;
 }
 a.list-group-item-success.active {
   background-color: #18bc9c;
