Changed color for profile

--- a/web/css/flatlybootstrap.css
+++ b/web/css/flatlybootstrap.css
@@ -5132,7 +5132,7 @@ a.thumbnail.active {
   padding: 10px 15px;
   margin-bottom: -1px;
   background-color: #ffffff;
-  border: 1px solid #fff59d;
+  border: 1px solid #f77503;
 }
 .list-group-item:first-child {
   border-top-right-radius: 4px;
