--- a/backend/app/templates/uibar.html
+++ b/backend/app/templates/uibar.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="apistyle.css") }}">
     <div>IlliniStudent: <a href="/">Table Output</a> <a href="/webapi">API Output</a></div>
     <hr>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
     {% block content %}
     {% endblock %}
     <hr>
