--- a/backend/app/templates/fail.html
+++ b/backend/app/templates/fail.html
@@ -1,5 +1,5 @@
 {% extends "uibar.html" %}
 {% block content %}
-<h1>FAIL! THANK YOU {{ user_name }}</h1>
-<p>Error code {{ error }}
+<p>{{ WARNING }}</p>
+<a href="/index"><--back</a>
 {% endblock %}
