--- a/web/css/flatlybootstrap.css
+++ b/web/css/flatlybootstrap.css
@@ -4481,7 +4481,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #cccccc;
 }
 .navbar-inverse {
-  background-color: #18bc9c;
+  background-color: #1E8BC3;
   border-color: transparent;
 }
 .navbar-inverse .navbar-brand {
