--- a/mobile/app/illiniStudent/app/src/main/res/layout/sched.xml
+++ b/mobile/app/illiniStudent/app/src/main/res/layout/sched.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Will eventually have the students schedule"
-        android:id="@+id/textView5"
+        android:id="@+id/netResult"
         android:textColor="#ffffff"
         android:textSize="40dp"
         android:layout_centerVertical="true"
@@ -20,6 +20,6 @@
         android:layout_height="wrap_content"
         android:text="Home"
         android:id="@+id/button2"
-        android:layout_below="@+id/textView5"
+        android:layout_below="@+id/netResult"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
