--- a/mobile/app/illiniStudent/app/src/main/res/layout/settings.xml
+++ b/mobile/app/illiniStudent/app/src/main/res/layout/settings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/settings"
     android:background="#4183D7">
 
     <Button
@@ -9,5 +10,36 @@
         android:layout_height="wrap_content"
         android:text="Home"
         android:id="@+id/button8"
-        android:layout_gravity="center_horizontal" />
-</LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="296dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText11"
+        android:layout_marginLeft="0dp"
+        android:inputType="none"
+        android:layout_below="@+id/textView6"
+        android:layout_alignStart="@+id/button8" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="What color would you like the background to be?"
+        android:id="@+id/textView6"
+        android:textColor="#ffffff"
+        android:textSize="28dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="62dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Apply"
+        android:id="@+id/button11"
+        android:layout_below="@+id/button8"
+        android:layout_centerHorizontal="true" />
+</RelativeLayout>
