--- a/mobile/app/illiniStudent/app/src/main/res/layout/tasks.xml
+++ b/mobile/app/illiniStudent/app/src/main/res/layout/tasks.xml
@@ -1,106 +1,149 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#4183D7">
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Task 1:"
-        android:id="@+id/textView"
-        android:enabled="true"
-        android:editable="false"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="39dp"
-        android:textSize="22dp"
-        android:textColor="#ffffffff"/>
+    <TabHost
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/tabHost"
+        android:layout_below="@+id/editText2"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button">
 
-    <EditText
-        android:layout_width="311dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:text="Calc 2: Hw 11 due 3/3 @ 11:59 pm"
-        android:enabled="true"
-        android:textSize="32dp"
-        android:textColor="#ffffffff"
-        android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_alignStart="@+id/editText3" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Task 2:"
-        android:id="@+id/textView2"
-        android:enabled="true"
-        android:editable="false"
-        android:textSize="22dp"
-        android:textColor="#ffffffff"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"></TabWidget>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Task 3:"
-        android:id="@+id/textView3"
-        android:enabled="true"
-        android:editable="false"
-        android:textSize="22dp"
-        android:textColor="#ffffffff"
-        android:layout_below="@+id/editText3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
 
-    <EditText
-        android:layout_width="311dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:text="Phys 211: Prelecture 13 due 3/4 @ 8:00 am"
-        android:enabled="true"
-        android:textSize="32dp"
-        android:textColor="#ffffffff"
-        android:layout_below="@+id/textView3"
-        android:layout_alignRight="@+id/button3"
-        android:layout_alignEnd="@+id/button3" />
+                <LinearLayout
+                    android:id="@+id/tabTasks"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1">
 
-    <EditText
-        android:layout_width="311dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:text="Phys 211: Checkpoint 13 due 3/4 @ 8:00 am"
-        android:enabled="true"
-        android:textSize="32dp"
-        android:textColor="#ffffffff"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+                    <TextView
+                        android:layout_width="155dp"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="Your Tasks"
+                        android:id="@+id/textView2"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="30dp"
+                        android:textStyle="bold" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Calendar"
-        android:id="@+id/button3"
-        android:enabled="true"
-        android:textSize="22dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/editText3"
-        android:layout_alignEnd="@+id/editText3" />
+                    <ListView
+                        android:layout_width="match_parent"
+                        android:layout_height="133dp"
+                        android:id="@+id/listView"
+                        android:layout_weight="1.02" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:id="@+id/button4"
-        android:enabled="true"
-        android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/textView3"
-        android:layout_toEndOf="@+id/textView3"
-        android:textSize="22dp" />
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Home"
+                        android:id="@+id/button4"
+                        android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/tabCreate"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:orientation="vertical"
+                    android:weightSum="1">
+
+                    <TextView
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="Create a Task"
+                        android:id="@+id/textView"
+                        android:textSize="32dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="0dp"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:ems="10"
+                        android:id="@+id/editText3"
+                        android:layout_below="@+id/textView"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop="59dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:editable="false"
+                        android:hint="Task Name" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="date"
+                        android:ems="10"
+                        android:id="@+id/editText4"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@+id/editText5"
+                        android:layout_alignParentLeft="true"
+                        android:hint="Date" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPersonName"
+                        android:ems="10"
+                        android:id="@+id/editText5"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@+id/editText3"
+                        android:layout_alignParentLeft="true"
+                        android:hint="Class" />
+
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/editText2"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_below="@+id/editText4"
+                        android:layout_alignParentLeft="true"
+                        android:hint="Description" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Add Task"
+                        android:id="@+id/button"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignLeft="@+id/textView"
+                        android:layout_alignStart="@+id/textView"
+                        android:layout_alignRight="@+id/textView"
+                        android:layout_alignEnd="@+id/textView"
+                        android:enabled="false"
+                        android:layout_gravity="center_horizontal" />
+                </LinearLayout>
+
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
+
 </RelativeLayout>
