Ability to save tasks

--- a/web/css/fullcalendar.css
+++ b/web/css/fullcalendar.css
@@ -23,10 +23,12 @@ body .fc { /* extra precedence to overcome jqui */
     display:inline-block;
 }
 
-#tasks{
+#rblock{
     width: 50%;
     float:right;
 }
+
+
 
 
 /* Colors
