--- a/mobile/app/illiniStudent/app/src/main/res/layout/sched.xml
+++ b/mobile/app/illiniStudent/app/src/main/res/layout/sched.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4183D7">
+    android:background="#FFB300">
 
     <TextView
         android:layout_width="wrap_content"
